[FIX] Added variables for color + changed for improved readability + changed website for business (not academy)

--- a/style/button.css
+++ b/style/button.css
@@ -1,6 +1,8 @@
+@import url('night_mode.css');
+
 button {
     background-color: transparent;
-    color: #6ed6f0;
+    color: var(--link-color);
     border: solid;
     padding: 5px -10px;
     border-radius: 5px;
@@ -13,6 +15,6 @@ button {
   
 button:hover {
     transform: scale(1.1);
-    background-color: blue;
+    background-color: var(--hover-color);
   }
   
