--- a/style/img.css
+++ b/style/img.css
@@ -13,7 +13,7 @@ img {
 
 /* Index image */
 .index_img {
-    width: 150px;
+    width: 200px;
 }
 
 /* Posters */
